[package]
edition = "2018"

name = "advent_2020"
version = "2020.12.12"

authors = ["Randy Eckenrode <randy@largeandhighquality.com>"]
description = "Advent of Code 2020 solutions written in Rust"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
nalgebra = "0.23.1"
num = "0.3.1"
rand = "0.7.3"
is_sorted = "0.1.1"

[dev-dependencies]
proptest = "0.10.1"
